# genesis-learning

./: .gitignore  LICENSE  README.md  advanced_ik.py  grasp_env.py  grasp_train.py  hello_genesis.py  hover_env.py  interactive_debugging.py  inverse_kinematics.py  locomotion_eval.py  locomotion_train.py  parallel_simulation.py  pyproject.toml  visualization.py
advanced_ik/: advanced_ik.py
beyond_rigid_bodies/: beyond_rigid_bodies.py
control_your_robot/: control_robot.py
hover_env/: hover_eval.py  hover_train.py
locomotion/: locomotion_env.py  locomotion_train.py
manipulation/: grasp_eval.py  imitation_learning.py
parallel_simulation/: parallel_simulation.py
sensors/: sensors_contact.py  sensors_imu.py
