[project]
name = "genesis-learning"
version = "0.1.0"
description = "Genesis 物理シミュレーション学習プロジェクト"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genesis-world>=0.3.10",
    "ipython>=9.8.0",
    "ompl>=1.7.0",
    "rsl-rl-lib==2.2.4",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]
